# jni-playground

./: .gitignore  compileLibrary.sh  generateHeaders.sh  pom.xml
jni/: CMakeLists.txt
jni/include/: pkg_HelloJNI.h
jni/src/: pkg_HelloJNI.cpp
src/main/java/pkg/: HelloJNI.java  UserData.java
